--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-# serapx.github.io
-Project App
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta charset="utf-8"  />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"  />
+    <title>Deeply - Die App für echte Gespräche</title>
+    <meta name="description" content="Deeply verbindet dich über tiefgründige Fragen mit Menschen, die wirklich zuhören. Tagesfrage, DeepTalk mit Freunden, Matching & Reflextion."  />
+    <meta name="theme-color" content="#0f172a"  />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+      <style>
+      :root{
+        --bg:#0b1020;        /* Tiefes Navy */
+        --card:#11162a;      /* Kartenhintergrund */
+        --muted:#9aa4b2;     /* Sekundärtext */
+        --text:#e6e8ec;      /* Primärtext */
+        --brand1:#6dd5ed;    /* Verlauf hell */
+        --brand2:#cc99ff;    /* Verlauf dunkel */
+        --accent:#9bd3c7;    /* Akzent */
+        --radius;18px;
+        }
+        
+      </style>
+  </head>
