Add landing page
Added meta tags for Apple mobile web app capabilities.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Deeply - Die App für echte Gespräche</title>
   <meta name="description" content="Deeply - Tief reden. Echt fühlen. Die App für echte Gespräche mit Tagesfragen, DeepTalk, Matching und Reflexion." />
   <meta name="theme-color" content="#0f172a" />
+  <meta name="apple-movile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <style>
     :root{
