--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
   <meta charset="utf-8"  />
@@ -6,7 +6,7 @@
   <title>Deeply - Die App für echte Gespräche</title>
   <meta name="description" content="Deeply - Tief reden. Echt fühlen. Die App für echte Gespräche mit Tagesfragen, DeepTalk, Matching und Reflexion." />
   <meta name="theme-color" content="#0f172a" />
-  <meta name="apple-movile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -27,7 +27,6 @@
                radial-gradient(1000px 700px at -10% 10%, rgba(142,197,255,.18), transparent 40%),
                linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,0));
     }
-
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
@@ -44,7 +43,7 @@
     .brand{display:flex; flex-direction:column; align-items:center; gap:10px}
     .logo{width:96px; height:96px; filter:drop-shadow(0 4px 14px rgba(0,0,0,.35))}
     .title{font-weight:800; font-size:clamp(24px, 6vw, 42px); line-height:1.1; letter-spacing:.2px}
-    .subtitle{color:var:var(--muted); font-size:clamp(14px, 2.8vw, 18px)}
+    .subtitle{color:var(--muted); font-size:clamp(14px, 2.8vw, 18px)}
     .cta-row{display:flex; gap:12px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:8px}
     .btn{display:inline-flex; align-items:center;justify-content:center; gap:10px; padding:14px 18px; border-radius:999px; background:linear-gradient(135deg, var(--accent), var(--accent-2)); color:#0b1020;font-weight:800;letter-spacing:.2px;box-shadow:var(--shadow);}
     .btn:focus-visible{outline:none; box-shadow:var(--shadow), var(--ring)}
@@ -58,19 +57,19 @@
 
     /* CARDS */
     .cards{display:grid;grid-template-columns:1fr;gap:14px;margin-top:16px}
-    .card{background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,9)); border:1px solid rgba(255,255,255,.12); border-radius:var(--radius); padding:16px; box-shadow:var(--shadow)}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.09)); border:1px solid rgba(255,255,255,.12); border-radius:var(--radius); padding:16px; box-shadow:var(--shadow)}
     .row{display:flex; align-items:flex-start;gap:12px}
-    .ico{flex:0 0 36px; width:36px; height:36px; display:grid; place-items:center; border-radius:12px; background:linear-gradient(135deg, rgba(142,197,255,.2), rhba(179,139,255,.2)); border:1px solid rgba(255,255,255,.12)}
+    .ico{flex:0 0 36px; width:36px; height:36px; display:grid; place-items:center; border-radius:12px; background:linear-gradient(135deg, rgba(142,197,255,.2), rgba(179,139,255,.2)); border:1px solid rgba(255,255,255,.12)}
     .card h3{margin:0 0 6px; font-size:16px}
     .card p{margin:0; color:var(--muted); font-size:14px}
 
     /* FEATURE LIST */
-    .list{display:grip; grid-template-columns:1fr; gap:10px; margin:12px 0 0}
-    .chip{display:flex; align-items:center; gap:10px; padding:10px 12px; border-radius:12px; background:rgba(255,255,255,.04); 1px solid rgba(255,255,255,.08)}
+    .list{display:grid; grid-template-columns:1fr; gap:10px; margin:12px 0 0}
+    .chip{display:flex; align-items:center; gap:10px; padding:10px 12px; border-radius:12px; background:rgba(255,255,255,.04); border:1px solid rgba(255,255,255,.08)}
 
     /* VIDEO */
-    .video{position:relative; overflow:hidden; border-radius:18px; border:1px solidrgba(255,255,255,.12); box-shadow:var(--shadow); background:#000}
-    .video::before{content:""; display:block; padding-top:56.25%}
+    .video{position:relative; overflow:hidden; border-radius:18px; border:1px solid rgba(255,255,255,.12); box-shadow:var(--shadow); background:#000}
+    .video:before{content:""; display:block; padding-top:56.25%}
     .video iframe{position:absolute; inset:0; width:100%; height:100%; border:0}
 
     /* FOOTER CTA */
@@ -82,7 +81,7 @@
     @media (min-width:768px){
       .hero-inner{padding:64px 20px 96px}
       .cards{grid-template-columns:repeat(2,1fr)}
-      .list{grid-template-colums:repeat(2,1fr)}
+      .list{grid-template-columns:repeat(2,1fr)}
     }
 
     /* ANIMATIONS (lightweight) */
@@ -92,14 +91,14 @@
     /* App Shell - phone-like look */
     .phone{ width:min(420px, 100%); margin:12px; border-radius:28px; border:1px solid rgba(255,255,255,.08); box-shadow:0 20px 60px rgba(0,0,0,.55); overflow:hidden; background:var(--bg); position:relative; }
     .appbar{ position:sticky; top:0; z-index:10; display:flex; align-items:center; justify-content:space-between; gap:10px; padding: max(12px, env(safe-area-inset-top))16px 10px; background:rgba(11,16,32,.85); backdrop-filter: blur(12px); border-bottom:1px solid rgba(255,255,255,.08); }
-    .appbar.title{ font-weight:800; letter-spacing:.2px }
-    .appbar-cta{ padding:8px 12px; border-radius: 999px; border:1px solid rgba (255,255,255,.16) }
+    .appbar-title{ font-weight:800; letter-spacing:.2px }
+    .appbar-cta{ padding:8px 12px; border-radius: 999px; border:1px solid rgba(255,255,255,.16) }
     .appbar-logo{ width:24px; height:24px; border-radius:6px }
-    .screen{ height: calc(100dvh - 66px - 70px - env(safe-area-inset-tip) - env(safe-area-inset-bottom)); overflow:auto; -webkit-overflow-scrolling:touch; }
-    .tabbar{ position:sticky; bottom:0; z-index:10; display:flex; justify-content:space-around; align-items:center; gap:8px; padding: 8px 10px calc(10px + (safe-area-inset-bottom)); background:rgba(11,16,32,.85); background-filter:; blur(12px); border-top:1px solid rgba(255,255,255,.08); }
-    .tap{ display:flex; flex-direction:column; align-items:center; gap:2px; font-size:12px; colour:var(--muted); text-decoration:none; }
+    .screen{ height: calc(100dvh - 66px - 70px - env(safe-area-inset-top) - env(safe-area-inset-bottom)); overflow:auto; -webkit-overflow-scrolling:touch; }
+    .tabbar{ position:sticky; bottom:0; z-index:10; display:flex; justify-content:space-around; align-items:center; gap:8px; padding: 8px 10px calc(10px + env(safe-area-inset-bottom)); background:rgba(11,16,32,.85); background-filter: blur(12px); border-top:1px solid rgba(255,255,255,.08); }
+    .tap{ display:flex; flex-direction:column; align-items:center; gap:2px; font-size:12px; color:var(--muted); text-decoration:none; }
     .tap .ic{ font-size:20px; line-height:1 }
-    -tap .active{ color: var(--text); font-weight:700 }
+    .tap .active{ color: var(--text); font-weight:700 }
   </style>
 
   <link rel="icon" href="Logo.png" sizes="96x96" />
@@ -124,7 +123,7 @@
     <!-- Abschnitt: Das Problem -->
     <section class="wrap" id="problem">
       <h2 class="h2">Wir reden viel, aber sagen wenig.</h2>
-      <p class="p">Gespräche bleiben oft oberflächlich. Viel fühlen sich trotz Social Media einsam oder missverstanden. Deeply setzt hier an.</p>
+      <p class="p">Gespräche bleiben oft oberflächlich. Viele fühlen sich trotz Social Media einsam oder missverstanden. Deeply setzt hier an.</p>
       <div class="cards">
         <article class="card fade-up">
           <div class="row">
@@ -150,10 +149,10 @@
     <!-- Abschnitt: Die Lösung -->
     <section class="wrap" id="solution">
       <h2 class="h2">Echte Gespräche in der Hosentasche.</h2>
-      <p class="p">Deeply bringt dich mit Freunden oder neuen Menschen ins Gespräch - geführt, sicher udn auf Augenhöhe.</p>
+      <p class="p">Deeply bringt dich mit Freunden oder neuen Menschen ins Gespräch - geführt, sicher und auf Augenhöhe.</p>
       <div class="list">
         <div class="chip fade-up">🧩 <strong style="margin-left:6px">Tagesfrage</strong> - Jeden Tag eine inspirierende Frage ("Was bedeutet Vertrauen für dich?")</div>
-        <div class="chip fade-up">💬 <strong style="margin-left:6px">DeepTalk mit Freunden</strong> - Lade ein und beantwortet Fragen gemeinsam.</div>
+        <div class="chip fade-up">💬 <strong style="margin-left:6px">DeepTalk mit Freunden</strong> - Lade Freunde ein und beantwortet Fragen gemeinsam.</div>
         <div class="chip fade-up">💞 <strong style="margin-left:6px">Matching</strong> - Anonyme Gespräche mit Menschen mit ähnlichen Antworten.</div>
         <div class="chip fade-up">🌙 <strong style="margin-left:6px">Reflektionsmodus</strong> - Dein persönliches Tagebuch nach jedem Gespräch.</div>
       </div>
@@ -181,7 +180,7 @@
             </div>
           </div>
         </article>
-        <article class="crad fade-up">
+        <article class="card fade-up">
           <div class="row">
             <div class="ico" aria-hidden="true">⌛️</div>
             <div>
@@ -207,17 +206,17 @@
       <h2 class="h2">Pitch-Video</h2>
       <div class="video fade-up" role="region" aria-label="Pitch-Video">
         <!-- Youtube-Link -->
-        <iframe src="youtube" title="Deeply-Pitch Video" allow="acclermometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in picture; web-share" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/VIDEO_ID" title="Deeply-Pitch Video" allow="accelermometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in picture; web-share" allowfullscreen></iframe>
       </div>
     </section>
 
     <!-- Abschnitt: Call to Action -->
     <section class="wrap" id="cta">
-      <h2 class="h2">Bereit für echtes?</h2>
+      <h2 class="h2">Bereit für echte Gespräche?</h2>
       <p class="p">Buche einen Termin für Demo & Fragen - wir freuen uns auf dich.</p>
       <div class="cta-row" style="margin-top:14px">
         <a class="btn" href="https://calendly.com/deinlink" target="_blank" rel="noopener" aria-label="Termin bei Calendly buchen">👉🏼 Buchen Sie einen Termin</a>
-        <a class="btn sec" href="#home" aria-label="Zueück nach oben">🔝 Nach oben</a>
+        <a class="btn sec" href="#home" aria-label="Zurück nach oben">🔝 Nach oben</a>
       </div>
     </section>
   </main>
@@ -225,40 +224,40 @@
 </div><!-- /.screen -->
   <nav class="tabbar" aria-label="Hauptnavigation">
     <a class="tab active" href="#home"><span class="ic">🏠</span><span>Home</span></a>
-    <a class="tab" href="#soluction"><span class="ic">✨</span><span>Features</span></a>
+    <a class="tab" href="#solution"><span class="ic">✨</span><span>Features</span></a>
     <a class="tab" href="#video"><span class="ic">🎬</span><span>Video</span></a>
-    <a class="tab" href="#cta"><span class=ic">📅</span><span>Termin</span></a>
+    <a class="tab" href="#cta"><span class="ic">📅</span><span>Termin</span></a>
   </nav>
 </div><!-- /.phone -->
   
   <script>
-    const scroller = document.querySelection('.screen');
+    const scroller = document.querySelector('.screen');
     
     //Fade-up on view within the app screen
     const io = new IntersectionObserver((entries)=>{
-      entries.forEach(e=>{ if(e.isIntersecting) e.target.classlist.add('appear'); });
-    } {threshold: 0.15, root: scroller});
+      entries.forEach(e=>{ if(e.isIntersecting) e.target.classList.add('appear'); });
+    }, {threshold: 0.15, root: scroller});
     document.querySelectorAll('.fade-up').forEach(el=>io.observe(el));
 
     //Smooth in-screen scrolling for anchors links
     document.querSelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click'. (e)=>{
+      a.addEventListener('click', (e)=>{
         const id = a.getAttribute('href');
         if(id && id.length>1){
-          const el = document.querSelection(id);
-        if(el){ e.preventDefault(); scroller.scrollTo({top: el.offsetTop - 8, behavior;'smooth'}); }
+          const el = document.querSelector(id);
+        if(el){ e.preventDefault(); scroller.scrollTo({top: el.offsetTop - 8, behavior:'smooth'}); }
         }
       });
     });
 
     //Activate bottom tab matching the visible section
-    const tabs = Array.from(document.querSelectorAll('.tabbar .tab'));
+    const tabs = Array.from(document.querySelectorAll('.tabbar .tab'));
     const sections = ['home','solution','video','cta']
       .map(id => document.getElementById(id))
       .filter(Boolean);
     const so = new IntersectionObserver((entries)=>{
       entries.forEach(entry=>{
-        if(entry.isIntersecting)}
+        if(entry.isIntersecting){
           const hash = '#' + entry.target.id;
           tabs.forEach(t => t.classList.toogle('active', t.getAttribute('href') ===));
       }
